use relative paths in html

--- a/Pages/Tag.razor
+++ b/Pages/Tag.razor
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/">Go back</a>
+                    <a href="">Go back</a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
 
                             <div class="post-header">
                                 <h2 class="post-title">
-                                    <a href="/code/@post.Id">@post.Title</a>
+                                    <a href="code/@post.Id">@post.Title</a>
                                 </h2>
                                 <ul class="post-meta">
                                     <li>
