--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -33,7 +33,7 @@
 
                             <div class="post-header">
                                 <h2 class="post-title">
-                                    <a href="/code/@post.Id">@post.Title</a>
+                                    <a href="code/@post.Id">@post.Title</a>
                                 </h2>
                                 <ul class="post-meta">
                                     <li>
@@ -44,7 +44,7 @@
                                     @foreach (var tag in post.Tags)
                                     {
                                         <li>
-                                            <i class="mdi mdi-tag-text-outline"></i> <a href="/tag/@tag">@tag@delimiter</a>
+                                            <i class="mdi mdi-tag-text-outline"></i> <a href="tag/@tag">@tag@delimiter</a>
                                         </li>
                                         delimiter = ", ";
                                     }
