put all the hrefs back to absolute.

--- a/Pages/Tag.razor
+++ b/Pages/Tag.razor
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="">Go back</a>
+                    <a href="/">Go back</a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
 
                             <div class="post-header">
                                 <h2 class="post-title">
-                                    <a href="code/@post.Id">@post.Title</a>
+                                    <a href="/code/@post.Id">@post.Title</a>
                                 </h2>
                                 <ul class="post-meta">
                                     <li>
@@ -52,19 +52,19 @@
                                     @foreach (var tag in post.Tags)
                                     {
                                         <li>
-                                            <i class="mdi mdi-tag-text-outline"></i> <a href="#">@tag@delimiter</a>
+                                            <i class="mdi mdi-tag-text-outline"></i> <a href="/#">@tag@delimiter</a>
                                         </li>
                                         delimiter = ", ";
                                     }
 
                                     <li>
-                                        <i class="mdi mdi-comment-multiple-outline"></i> <a href="#">0 Comments</a>
+                                        <i class="mdi mdi-comment-multiple-outline"></i> <a href="/#">0 Comments</a>
                                     </li>
                                 </ul>
                             </div>
 
                             <div class="post-preview">
-                                <a href="#">
+                                <a href="/#">
                                     <img src="/images/blog/blog-1.jpg" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
@@ -82,27 +82,27 @@
                         <div class="col-lg-12">
                             <ul class="pagination">
                                 <li class="next">
-                                    <a href="#">
+                                    <a href="/#">
                                         <i class="mdi mdi-chevron-left"></i>
                                     </a>
                                 </li>
                                 <li class="active">
-                                    <a href="#">1</a>
+                                    <a href="/#">1</a>
                                 </li>
                                 <li>
-                                    <a href="#">2</a>
+                                    <a href="/#">2</a>
                                 </li>
                                 <li>
-                                    <a href="#">3</a>
+                                    <a href="/#">3</a>
                                 </li>
                                 <li>
-                                    <a href="#">4</a>
+                                    <a href="/#">4</a>
                                 </li>
                                 <li>
-                                    <a href="#">5</a>
+                                    <a href="/#">5</a>
                                 </li>
                                 <li class="prev">
-                                    <a href="#">
+                                    <a href="/#">
                                         <i class="mdi mdi-chevron-right"></i>
                                     </a>
                                 </li>
