--- a/Pages/Template/about.html
+++ b/Pages/Template/about.html
@@ -7,25 +7,25 @@
     <meta name="description" content="Responsive blog template">
     <meta name="author" content="Zoyothemes">
 
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico">
 
     <title>Blogezy - Responsive Blog Template</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,700" rel="stylesheet">
+    <link href="/https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,700" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MENU CSS -->
-    <link href="css/metismenu.min.css" rel="stylesheet" type="text/css" />
+    <link href="/css/metismenu.min.css" rel="stylesheet" type="text/css" />
 
     <!-- MATERIALDESIGN ICON -->
-    <link rel="stylesheet" type="text/css" href="css/materialdesignicons.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/materialdesignicons.min.css">
 
     <!-- CUSTOM STYLESHEET -->
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="css/default.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/default.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -35,7 +35,7 @@
         <!-- Top Bar Start -->
         <div class="topbar-mobile">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="" class="" style="height: 44px;"></a>
+                <a href="/index.html"><img src="images/logo.png" alt="" class="" style="height: 44px;"></a>
                 <button class="button-menu-mobile">
                     <i class="mdi mdi-menu"></i>
                 </button>
@@ -48,7 +48,7 @@
             <div class="slimscroll-menu" id="remove-scroll">
 
                 <div class="logo">
-                    <a href="index.html"><img src="images/logo.png" alt="" class="" style="height: 44px;"></a>
+                    <a href="/index.html"><img src="images/logo.png" alt="" class="" style="height: 44px;"></a>
                     <p class="text-muted">Graduating from the halls of the University Of Western Sydney in late 2011. </p>
                 </div>
 
@@ -58,40 +58,40 @@
                     <ul class="metismenu" id="side-menu">
 
                         <li>
-                            <a href="index.html"><span> Home</span></a>
+                            <a href="/index.html"><span> Home</span></a>
                         </li>
 
                         <li>
-                            <a href="javascript: void(0);"><span> Features </span></a>
+                            <a href="/javascript: void(0);"><span> Features </span></a>
                             <ul class="nav-second-level" aria-expanded="false">
-                                <li><a href="standard-post.html">Standard Post</a></li>
-                                <li><a href="video-post.html">Video Post</a></li>
-                                <li><a href="audio-post.html">Audio Post</a></li>
-                                <li><a href="gallery-post.html">Gallery Post</a></li>
-                                <li><a href="quote-post.html">Quote Post</a></li>
-                                <li><a href="link-post.html">Link Post</a></li>
-                                <li><a href="404.html">Error 404</a></li>
+                                <li><a href="/standard-post.html">Standard Post</a></li>
+                                <li><a href="/video-post.html">Video Post</a></li>
+                                <li><a href="/audio-post.html">Audio Post</a></li>
+                                <li><a href="/gallery-post.html">Gallery Post</a></li>
+                                <li><a href="/quote-post.html">Quote Post</a></li>
+                                <li><a href="/link-post.html">Link Post</a></li>
+                                <li><a href="/404.html">Error 404</a></li>
                             </ul>
                         </li>
 
                         <li>
-                            <a href="javascript: void(0);"><span> Lifestyle </span></a>
+                            <a href="/javascript: void(0);"><span> Lifestyle </span></a>
                         </li>
 
                         <li>
-                            <a href="javascript: void(0);"><span> Travel </span></a>
+                            <a href="/javascript: void(0);"><span> Travel </span></a>
                         </li>
 
                         <li>
-                            <a href="javascript: void(0);"><span> Music </span></a>
+                            <a href="/javascript: void(0);"><span> Music </span></a>
                         </li>
 
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="/about.html">About</a>
                         </li>
 
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="/contact.html">Contact</a>
                         </li>
 
                     </ul>
@@ -139,10 +139,10 @@
                                     <p>Quisque nec accumsan justo. Maecenas auctor in nulla nec tincidunt. Pellentesque rutrum molestie tortor, ut egestas risus commodo a. Praesent a orci nec libero fringilla euismod eu id massa. Nunc eget bibendum odio, sed sodales eros.Vivamus lacinia, mi eu ultrices mattis.</p>
 
                                     <ul class="socials list-unstyled mb-0 text-center mt-5">
-                                        <li><a href="http://facebook.com"><i class="mdi mdi-facebook"></i></a></li>
-                                        <li><a href="http://twitter.com"><i class="mdi mdi-twitter"></i></a></li>
-                                        <li><a href="http://instagram.com"><i class="mdi mdi-instagram"></i></a></li>
-                                        <li><a href="http://pinterest.com"><i class="mdi mdi-pinterest"></i></a></li>
+                                        <li><a href="/http://facebook.com"><i class="mdi mdi-facebook"></i></a></li>
+                                        <li><a href="/http://twitter.com"><i class="mdi mdi-twitter"></i></a></li>
+                                        <li><a href="/http://instagram.com"><i class="mdi mdi-instagram"></i></a></li>
+                                        <li><a href="/http://pinterest.com"><i class="mdi mdi-pinterest"></i></a></li>
                                     </ul>
 
                                 </div>
