--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 <div class="topbar-mobile">
     <div class="logo">
-        <a href="">
+        <a href="/">
             <img src="images/logo.png" alt="" class="" style="height: 44px;">
         </a>
         <button class="button-menu-mobile">
