--- a/Pages/Music.razor
+++ b/Pages/Music.razor
@@ -34,17 +34,17 @@
 
                     @* <article class="post"> *@
                     @*                         <div class="post-header"> *@
-                    @*                             <h2 class="post-title"><a href="#">Runaway A Road Adventure</a></h2> *@
+                    @*                             <h2 class="post-title"><a href="/#">Runaway A Road Adventure</a></h2> *@
                     @*                             <ul class="post-meta"> *@
                     @*                                 <li><i class="mdi mdi-calendar"></i> July 03, 2019</li> *@
-                    @*                                 <li><i class="mdi mdi-tag-text-outline"></i> <a href="#">Branding</a>, <a href="#">Design</a> *@
+                    @*                                 <li><i class="mdi mdi-tag-text-outline"></i> <a href="/#">Branding</a>, <a href="/#">Design</a> *@
                     @*                                 </li> *@
-                    @*                                 <li><i class="mdi mdi-comment-multiple-outline"></i> <a href="#">3 Comments</a></li> *@
+                    @*                                 <li><i class="mdi mdi-comment-multiple-outline"></i> <a href="/#">3 Comments</a></li> *@
                     @*                             </ul> *@
                     @*                         </div> *@
                     @* *@
                     @*                         <div class="post-preview"> *@
-                    @*                             <a href="blog-single.html"><img src="images/blog/blog-1.jpg" alt="" *@
+                    @*                             <a href="/blog-single.html"><img src="images/blog/blog-1.jpg" alt="" *@
                     @*                                                             class="img-fluid rounded"></a> *@
                     @*                         </div> *@
                     @* *@
@@ -72,9 +72,9 @@
                     @*                             <div class="mt-5"> *@
                     @*                                 <h6>Tags:</h6> *@
                     @*                                 <div class="tagcloud"> *@
-                    @*                                     <a href="#">logo</a> *@
-                    @*                                     <a href="#">business</a> *@
-                    @*                                     <a href="#">agency</a> *@
+                    @*                                     <a href="/#">logo</a> *@
+                    @*                                     <a href="/#">business</a> *@
+                    @*                                     <a href="/#">agency</a> *@
                     @*                                 </div> *@
                     @*                             </div> *@
                     @* *@
@@ -82,17 +82,17 @@
                     @*                                 <img class="d-flex mr-3 rounded-circle" src="images/user/user-5.png" *@
                     @*                                      alt="Generic placeholder image"> *@
                     @*                                 <div class="media-body"> *@
-                    @*                                     <h4 class="media-heading"><a href="">Michelle Durant</a></h4> *@
+                    @*                                     <h4 class="media-heading"><a href="/">Michelle Durant</a></h4> *@
                     @*                                     <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra *@
                     @*                                         euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing *@
                     @*                                         in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis *@
                     @*                                         placerat, felis enim.</p> *@
                     @* *@
                     @*                                     <ul class="socials list-unstyled mb-0 mt-3"> *@
-                    @*                                         <li><a href="http://facebook.com"><i class="mdi mdi-facebook"></i></a></li> *@
-                    @*                                         <li><a href="http://twitter.com"><i class="mdi mdi-twitter"></i></a></li> *@
-                    @*                                         <li><a href="http://instagram.com"><i class="mdi mdi-instagram"></i></a></li> *@
-                    @*                                         <li><a href="http://pinterest.com"><i class="mdi mdi-pinterest"></i></a></li> *@
+                    @*                                         <li><a href="/http://facebook.com"><i class="mdi mdi-facebook"></i></a></li> *@
+                    @*                                         <li><a href="/http://twitter.com"><i class="mdi mdi-twitter"></i></a></li> *@
+                    @*                                         <li><a href="/http://instagram.com"><i class="mdi mdi-instagram"></i></a></li> *@
+                    @*                                         <li><a href="/http://pinterest.com"><i class="mdi mdi-pinterest"></i></a></li> *@
                     @*                                     </ul> *@
                     @*                                 </div> *@
                     @*                             </div> *@
@@ -105,12 +105,12 @@
                     @*                                 <div class="col-sm-4"> *@
                     @*                                     <article class="related-post"> *@
                     @*                                         <div class="post-preview"> *@
-                    @*                                             <a href="blog-single.html"><img src="images/blog/blog-2.jpg" alt="" *@
+                    @*                                             <a href="/blog-single.html"><img src="images/blog/blog-2.jpg" alt="" *@
                     @*                                                                             class="img-fluid rounded"></a> *@
                     @*                                         </div> *@
                     @* *@
                     @*                                         <div class="post-header"> *@
-                    @*                                             <h6><a href="single-post2.html" title="">15 Best Healthy and Easy Salad *@
+                    @*                                             <h6><a href="/single-post2.html" title="">15 Best Healthy and Easy Salad *@
                     @*                                                 Recipes</a></h6> *@
                     @*                                             <p class="post-date">August 12, 2019</p> *@
                     @*                                         </div> *@
@@ -119,12 +119,12 @@
                     @*                                 <div class="col-sm-4"> *@
                     @*                                     <article class="related-post"> *@
                     @*                                         <div class="post-preview"> *@
-                    @*                                             <a href="blog-single.html"><img src="images/blog/blog-3.jpg" alt="" *@
+                    @*                                             <a href="/blog-single.html"><img src="images/blog/blog-3.jpg" alt="" *@
                     @*                                                                             class="img-fluid rounded"></a> *@
                     @*                                         </div> *@
                     @* *@
                     @*                                         <div class="post-header"> *@
-                    @*                                             <h6><a href="single-post2.html" title="">The planet doesn’t need saving. We *@
+                    @*                                             <h6><a href="/single-post2.html" title="">The planet doesn’t need saving. We *@
                     @*                                                 do.</a></h6> *@
                     @*                                             <p class="post-date">August 17, 2019</p> *@
                     @*                                         </div> *@
@@ -133,12 +133,12 @@
                     @*                                 <div class="col-sm-4"> *@
                     @*                                     <article class="related-post"> *@
                     @*                                         <div class="post-preview"> *@
-                    @*                                             <a href="blog-single.html"><img src="images/blog/blog-4.jpg" alt="" *@
+                    @*                                             <a href="/blog-single.html"><img src="images/blog/blog-4.jpg" alt="" *@
                     @*                                                                             class="img-fluid rounded"></a> *@
                     @*                                         </div> *@
                     @* *@
                     @*                                         <div class="post-header"> *@
-                    @*                                             <h6><a href="single-post2.html" title="">Modern City With Amazing Dark Blue *@
+                    @*                                             <h6><a href="/single-post2.html" title="">Modern City With Amazing Dark Blue *@
                     @*                                                 Sea</a></h6> *@
                     @*                                             <p class="post-date">August 20, 2019</p> *@
                     @*                                         </div> *@
@@ -156,9 +156,9 @@
                     @*                                     <img class="d-flex mr-3 rounded-circle" src="images/user/user-5.png" *@
                     @*                                          alt="Generic placeholder image"> *@
                     @*                                     <div class="media-body"> *@
-                    @*                                         <a href="#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
+                    @*                                         <a href="/#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
                     @*                                             Reply</a> *@
-                    @*                                         <h4 class="media-heading"><a href="">Michelle Durant</a></h4> *@
+                    @*                                         <h4 class="media-heading"><a href="/">Michelle Durant</a></h4> *@
                     @*                                         <p class="text-muted post-date">Jun 23, 2019, 11:45 am</p> *@
                     @*                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod *@
                     @*                                             odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in *@
@@ -171,9 +171,9 @@
                     @*                                     <img class="d-flex mr-3 rounded-circle" src="images/user/user-2.png" *@
                     @*                                          alt="Generic placeholder image"> *@
                     @*                                     <div class="media-body"> *@
-                    @*                                         <a href="#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
+                    @*                                         <a href="/#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
                     @*                                             Reply</a> *@
-                    @*                                         <h4 class="media-heading"><a href="">Ronda Otoole</a></h4> *@
+                    @*                                         <h4 class="media-heading"><a href="/">Ronda Otoole</a></h4> *@
                     @*                                         <p class="text-muted post-date">Jun 23, 2019, 11:45 am</p> *@
                     @*                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod *@
                     @*                                             odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in *@
@@ -184,9 +184,9 @@
                     @*                                             <img class="d-flex mr-3 rounded-circle" src="images/user/user-3.png" *@
                     @*                                                  alt="Generic placeholder image"> *@
                     @*                                             <div class="media-body"> *@
-                    @*                                                 <a href="#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
+                    @*                                                 <a href="/#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
                     @*                                                     Reply</a> *@
-                    @*                                                 <h4 class="media-heading"><a href="">James Whitley</a></h4> *@
+                    @*                                                 <h4 class="media-heading"><a href="/">James Whitley</a></h4> *@
                     @*                                                 <p class="text-muted post-date">Jun 23, 2019, 11:45 am</p> *@
                     @*                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra *@
                     @*                                                     euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, *@
@@ -201,9 +201,9 @@
                     @*                                     <img class="d-flex mr-3 rounded-circle" src="images/user/user-4.png" *@
                     @*                                          alt="Generic placeholder image"> *@
                     @*                                     <div class="media-body"> *@
-                    @*                                         <a href="#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
+                    @*                                         <a href="/#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
                     @*                                             Reply</a> *@
-                    @*                                         <h4 class="media-heading"><a href="">Kimberly Chretien</a></h4> *@
+                    @*                                         <h4 class="media-heading"><a href="/">Kimberly Chretien</a></h4> *@
                     @*                                         <p class="text-muted post-date">Jun 23, 2019, 11:45 am</p> *@
                     @*                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod *@
                     @*                                             odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in *@
@@ -216,9 +216,9 @@
                     @*                                     <img class="d-flex mr-3 rounded-circle" src="images/user/user-6.png" *@
                     @*                                          alt="Generic placeholder image"> *@
                     @*                                     <div class="media-body"> *@
-                    @*                                         <a href="#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
+                    @*                                         <a href="/#" class="text-custom reply-btn"><i class="mdi mdi-reply"></i>&nbsp; *@
                     @*                                             Reply</a> *@
-                    @*                                         <h4 class="media-heading"><a href="">Michelle Durant</a></h4> *@
+                    @*                                         <h4 class="media-heading"><a href="/">Michelle Durant</a></h4> *@
                     @*                                         <p class="text-muted post-date">Jun 23, 2019, 11:45 am</p> *@
                     @*                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod *@
                     @*                                             odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in *@
