--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -64,17 +64,17 @@
 
             <ul class="socials">
                 <li>
-                    <a href="/@SiteContext.GitHub">
+                    <a href="@SiteContext.GitHub">
                         <i class="mdi mdi-github-circle"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="/@SiteContext.StackOverflow">
+                    <a href="@SiteContext.StackOverflow">
                         <i class="mdi mdi-stackoverflow"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="/@SiteContext.LinkedIn">
+                    <a href="@SiteContext.LinkedIn">
                         <i class="mdi mdi-linkedin"></i>
                     </a>
                 </li>
