Get rid of redundant things

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -4,7 +4,7 @@
     <div id="sidebar-menu" style="padding: 1em">
 
         <aside class="widget about-widget">
-            <div class="widget-title">Adam Drewery</div>
+            @* <div class="widget-title">Adam Drewery</div> *@
 
             <div class="text-center">
                 <img src="images/me.jpg" alt="About Me" class="rounded-circle">
