--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,35 +2,31 @@
 @inject SiteContext SiteContext
 
 <div class="page-wrapper">
-    @* <section> *@
-    @*     <div class="container"> *@
-    @*         <div class="row"> *@
-    @*             <div class="col-lg-12"> *@
-    @*                 <div class="page-title"> *@
-    @*                     <div class="row"> *@
-    @*                         <div class="col-md-9 col-xs-12"> *@
-    @*                             <h2> *@
-    @*                                 <span>Programming and stuff</span> *@
-    @*                             </h2> *@
-    @*                         </div> *@
-    @*                     </div> *@
-    @*                 </div> *@
-    @*             </div> *@
-    @*         </div> *@
-    @*     </div> *@
-    @* </section> *@
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="page-title">
+                        <div class="row">
+                            <div class="col-md-9 col-xs-12">
+                                <h2>
+                                    <span>blog.</span>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="mt-3 pb-3">
         <div class="container">
             <div class="row">
-                <!-- Content-->
                 <div class="col-xl-8">
-
                     @foreach (var post in SiteContext.Posts)
                     {
-                        <!-- Post-->
                         <article class="post">
-
                             <div class="post-header">
                                 <h2 class="post-title">
                                     <a href="/code/@post.Id">@post.Title</a>
@@ -54,22 +50,16 @@
                                     </li>
                                 </ul>
                             </div>
-
                             <div class="post-preview">
                                 <a href="/#">
                                     <img src="images/blog/blog-1.jpg" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
-
                             <div class="post-content">
                                 <p>Whether an identity or campaign, we make your brand visible, relevant and effective by placing the digital at the center of its ecosystem, without underestimating the power of traditional media. Whether an identity or campaign, we make your brand visible.</p>
                             </div>
-
                         </article>
-                        <!-- Post end-->
                     }
-
-                    <!-- Pagination-->
                     <div class="row">
                         <div class="col-lg-12">
                             <ul class="pagination">
@@ -101,19 +91,8 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- Pagination end-->
                 </div>
-                <!-- Content end-->
-
-                @* <!-- Sidebar--> *@
-                @* <div class="col-xl-4"> *@
-                @*     <div class="sidebar"> *@
-                @*         <Sidebar /> *@
-                @*     </div> *@
-                @* </div> *@
-                @* <!-- Sidebar end--> *@
             </div>
         </div>
-        <!-- end container -->
     </section>
 </div>
