--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -29,7 +29,7 @@
                         <article class="post">
                             <div class="post-header">
                                 <h2 class="post-title">
-                                    <a href="/code/@post.Id">@post.Title</a>
+                                    <a href="/post/@post.Id">@post.Title</a>
                                 </h2>
                                 <ul class="post-meta">
                                     <li>
