--- a/Pages/Search.razor
+++ b/Pages/Search.razor
@@ -78,37 +78,7 @@
                             </div>
                         </article>
                     }
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <ul class="pagination">
-                                <li class="next">
-                                    <a href="/#">
-                                        <i class="mdi mdi-chevron-left"></i>
-                                    </a>
-                                </li>
-                                <li class="active">
-                                    <a href="/#">1</a>
-                                </li>
-                                <li>
-                                    <a href="/#">2</a>
-                                </li>
-                                <li>
-                                    <a href="/#">3</a>
-                                </li>
-                                <li>
-                                    <a href="/#">4</a>
-                                </li>
-                                <li>
-                                    <a href="/#">5</a>
-                                </li>
-                                <li class="prev">
-                                    <a href="/#">
-                                        <i class="mdi mdi-chevron-right"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                    <Pagination />
                 </div>
             </div>
         </div>
