fix menu init code

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -5,6 +5,7 @@
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await JSRuntime.InvokeVoidAsync("setupPhoto");
+        await JSRuntime.InvokeVoidAsync("initializeMenu");
     }
 }
 
